create pages for the individual projects

--- a/README
+++ b/README
@@ -28,17 +28,27 @@ SOME PLANNING
 - collect more meta-data in an SQLite database to provide a searchable interface
 
 
+DESCRIPTION
+---------------
+*) Syntax highlight the python files
+*) Each project has its own directory
+*) Each projects has a main page listing all the files in it
+*) The main page has a listing of all the projects (for now) with links to the main page of each project
+
+
 COMMENTS
 ----------
 In order to find out which token has which token number the mapping can
 be found here: /usr/lib/python2.7/token.py
 Apparently if I type pydoc  tokenize on the command line, I get the list
 
-
 TODO
 -------
-*) Syntax highlight the python files
 *) Parse other, non-python files as well and show them in some nice way
-*) Each project should have its own directory
-*) Each projects needs a main page listing all the files in it
-*) The main page will have a listing of all the projects (for now) with links to the main page of each project
+*) About page
+*) Navigation link from each file back to the project page
+*) Create a configuration file to process several projects, including the source code of Python itself.
+*) List the dependencies and link to the relevant project pages
+*) Show the documentation of each file/project as a separate HTML page
+
+
