--- a/README
+++ b/README
@@ -34,7 +34,8 @@ DESCRIPTION
 *) Each project has its own directory
 *) Each projects has a main page listing all the files in it
 *) The main page has a listing of all the projects (for now) with links to the main page of each project
-
+*) Parse other, non-python files as well and show them in some nice way
+*) Allow listing directories that need to be excluded from the display
 
 COMMENTS
 ----------
@@ -44,11 +45,11 @@ Apparently if I type pydoc  tokenize on the command line, I get the list
 
 TODO
 -------
-*) Parse other, non-python files as well and show them in some nice way
 *) About page
+*) Add logging to the parser
 *) Navigation link from each file back to the project page
 *) Create a configuration file to process several projects, including the source code of Python itself.
 *) List the dependencies and link to the relevant project pages
 *) Show the documentation of each file/project as a separate HTML page
-
+*) Handle the file we cannot parse and highlight (e.g. .png files)
 
