--- a/README
+++ b/README
@@ -37,6 +37,8 @@ DESCRIPTION
 *) Parse other, non-python files as well and show them in some nice way
 *) Allow listing directories that need to be excluded from the display
 *) Has simple about page
+*) Basic logging in the parser
+*) Navigation link from each file back to the project page
 
 COMMENTS
 ----------
@@ -46,10 +48,8 @@ Apparently if I type pydoc  tokenize on the command line, I get the list
 
 TODO
 -------
-*) Add logging to the parser
-*) Navigation link from each file back to the project page
 *) Create a configuration file to process several projects, including the source code of Python itself.
 *) List the dependencies and link to the relevant project pages
 *) Show the documentation of each file/project as a separate HTML page
 *) Handle the file we cannot parse and highlight (e.g. .png files)
-
+*) Mirror PyPi or sit on the RSS feed from PyPi and process the most recently uploaded projects.
