--- a/README
+++ b/README
@@ -49,6 +49,7 @@ Apparently if I type pydoc  tokenize on the command line, I get the list
 
 TODO
 -------
+*) Change the page names so they will have the same name as the original file, but still serve correctly
 *) Guessing the lexer better
 *) Each directory in the project tree has an index file listing all the files and subdirectories in it
 *) Create a configuration file to process several projects, including the source code of Python itself.
